[1045] Avoid collapsing header for single item menu

--- a/app/components/header/style.scss
+++ b/app/components/header/style.scss
@@ -1,3 +1,5 @@
+@import "../base.scss";
+
 .app-header__logo {
   width: auto;
 }
@@ -5,4 +7,23 @@
 .app-header__content {
   width: auto;
   float: right;
+}
+
+// If the header content contains just a single item, don't collapse into a
+// menu drop-down.
+.app-header__content--single-item {
+  .govuk-header__menu-button {
+    display: none;
+  }
+
+  .govuk-header__navigation {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 0;
+  }
+
+  .govuk-header__navigation-item {
+    border-bottom: none;
+  }
 }
